tests/cases_invalid/misc/assignment_undefined_assigned_value/.expected
error: could not find `undefined` value
 --> ./cases_invalid/misc/assignment_undefined_assigned_value/main.shd:3:13
  |
3 |     value = undefined;
  |             ^^^^^^^^^ undefined identifier
  |
